This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Audit event for os.system is incorrect
Type: Stage: resolved
Components: Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: steve.dower Nosy List: lukasz.langa, miss-islington, steve.dower
Priority: normal Keywords: patch

Created on 2019-10-09 02:28 by steve.dower, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 16670 merged steve.dower, 2019-10-09 02:30
PR 16836 merged miss-islington, 2019-10-18 07:52
Messages (3)
msg354245 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-10-09 02:28
It's documented as "os.system" but implemented as just "system".
msg354867 - (view) Author: miss-islington (miss-islington) Date: 2019-10-18 07:52
New changeset fbe3c76c7ce1eec887d332d801d3784212cc0f73 by Miss Islington (bot) (Steve Dower) in branch 'master':
bpo-38418: Fixes audit event for os.system to be named 'os.system' (GH-16670)
https://github.com/python/cpython/commit/fbe3c76c7ce1eec887d332d801d3784212cc0f73
msg354909 - (view) Author: miss-islington (miss-islington) Date: 2019-10-18 16:32
New changeset 5fb81420d5ad64a900940e908b546cf40f2d6807 by Miss Islington (bot) in branch '3.8':
bpo-38418: Fixes audit event for os.system to be named 'os.system' (GH-16670)
https://github.com/python/cpython/commit/5fb81420d5ad64a900940e908b546cf40f2d6807
History
Date User Action Args
2022-04-11 14:59:21adminsetgithub: 82599
2019-10-18 16:33:39steve.dowersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-10-18 16:32:38miss-islingtonsetmessages: + msg354909
2019-10-18 07:52:29miss-islingtonsetpull_requests: + pull_request16381
2019-10-18 07:52:18miss-islingtonsetnosy: + miss-islington
messages: + msg354867
2019-10-09 02:30:43steve.dowersetkeywords: + patch
stage: patch review
pull_requests: + pull_request16251
2019-10-09 02:28:04steve.dowercreate