bpo-38418: Fixes audit event for os.system to be named 'os.system'